<resources>
    <string name="app_name">Poonam Dua</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="revers">Reverse Your Diseases With Foods</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="no_image">No Image</string>
    <string name="ok">OK</string>
    <string name="john_doe">John Doe</string>
    <string name="arrow_right">Right</string>
    <string name="settings_accessibility">Detaisl</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="home">Dashboard</string>
    <string name="time">Time</string>
    <string name="statistics">Statistics</string>
    <string name="chat">Chat</string>
    <string name="answer">answer</string>
    <string name="question">Question</string>
    <string name="_10_jan_2018_08_55">10 jan 2018 08:55</string>
    <string name="receive">Receive</string>
    <string name="_5_204_usd">5.204 USD</string>
    <string name="_1_947_eth">1.947 ETH</string>
    <string name="_10_jan_2018_11_20">10 jan 2018 11:20</string>
    <string name="_1_639_eth">1.639 ETH</string>
    <string name="_4_38_usd">4.38 USD</string>
</resources>